--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "azure-aws-serverless-express": "^0.1.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1"
